# facebook-graphql-scraper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.py  main.py  pyproject.toml  requirements.txt  setup.py
fb_graphql_scraper/: __init__.py  example.ipynb  example.py  facebook_graphql_scraper.py  test_program.py
fb_graphql_scraper/base/: base_page.py
fb_graphql_scraper/pages/: page_optional.py
fb_graphql_scraper/utils/: locator.py  parser.py  utils.py
fb_scraper_request/: __init__.py  example.py  facebook_graphql_scraper.py
fb_scraper_request/pages/: page_optional.py
fb_scraper_request/utils/: parser.py
